# julia-cms

./: Cargo.toml  Readme.md  foo.txt
src/: config.rs  lib.rs  main.rs
src/compositions/: base_comp_result.rs  manager_impl.rs  mod.rs
src/compositions/banners/: banner_basic.rs  banner_type.rs  manager.rs  mod.rs
src/compositions/carousels/: carousel_basic.rs  carousel_blurred_overlay.rs  carousel_images.rs  carousel_of_images.rs  carousel_type.rs  manager.rs  mod.rs
src/compositions/texts/: manager.rs  mod.rs  text_basic.rs
src/gencode/: mod.rs
src/gencode/gen_managers/: arms_block.rs  builder.rs  gen_manager.rs  gen_manager_dependencies.rs  manager_dependents.rs  manager_method.rs  mod.rs
src/gencode/gen_managers/helpers/: get_all_composition_res_variants_enums.rs  get_composition_create_request.rs  get_composition_metadata.rs  get_composition_paths.rs  get_composition_res_enum.rs  get_mod.rs  import_composition_models.rs  iterate_over_all_enums_of_composition_category.rs  mod.rs
src/gencode/gen_managers/import_dependencies/: import_mods.rs
src/gencode/get_comp_type_manager/: arms_block.rs  crud_operation.rs  gen_manager.rs  helpers.rs  import_mods.rs  manager_dependents.rs  mod.rs  setup.rs  util.rs
src/helpers/: parse_ipfs_object.rs
src/services/: main.rs
src/space/: composition_association.rs  compositions_arrangement.rs  mod.rs  relationship_enums.rs  space.rs
src/temp_smart_contract_address_maps/: crud_address_smart_contract.rs  crud_text.rs  encryption.rs
src/tests/: compositions_test.rs  test.rs
