[package]
name = "julia-cms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.24.0"
strum_macros = "0.24.0"
#ipfsapi = "0.2"
ipfs-api-backend-actix = "0.5"
futures = "0.3"
codegen = "0.1.3"
firebase-rs = "2.0.1"
cortex-m = "0.7.4"
serde = "1.0.137"
serde_json = "1.0.81"
#dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
actix-rt = "*"
firestore_grpc = "0.109"
tokio = {version = "1.0", features = ["full"]}
chacha20poly1305 = "0.9.0"